[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yutubpy"
version = "0.1.0"
description = "youtube download wrapper"

requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = ["fastapi", "pydantic", "uvicorn", "yt-dlp"]
